--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
-indicatif = "0.15.0"
+winapi = { version = "0.3", features = ["fileapi", "handleapi", "memoryapi", "winnt", "minwinbase"] }
+indicatif = "0.16"
+walkdir = "2.3.2"
